--- a/module2Assignment/index.html
+++ b/module2Assignment/index.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="uft-8">
+	<title>assignment2</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+<h1>Our Menu</h1>
 
+<div class="row">
+  <div class="col-lg-4 col-md-6 col-sm-12">
+  	
+  	<table style="100%">
+  		<tr >
+  			<th></th>
+  			<th></th>
+  			<th></th>
+  			<th id="section">Chicken</th>
+
+  		</tr>
+  		<tr>
+  			<td colspan="4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus auctor vel lorem et consequat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In porta lacinia ipsum, nec consectetur tortor consequat a. Vestibulum molestie tincidunt arcu, sodales condimentum erat vulputate a. Ut ac tortor nisl. Curabitur et posuere nulla, ut feugiat arcu. Sed placerat pellentesque lacus at faucibus. Sed massa arcu, tristique eu neque vitae, sagittis luctus velit. Vestibulum id convallis massa. Donec hendrerit enim vel nunc sodales fringilla. Morbi condimentum, dolor at imperdiet tempus, ligula nibh efficitur tellus, tristique congue odio est at nulla.</td>
+  		</tr>		
+  	</table>
+  	
+  </div>
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+
+  	<table style="100%">
+  		<tr >
+  			<th></th>
+  			<th></th>
+  			<th></th>
+  			<th id="section">Beef</th>
+
+  		</tr>
+  		<tr>
+  			<td colspan="4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus auctor vel lorem et consequat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In porta lacinia ipsum, nec consectetur tortor consequat a. Vestibulum molestie tincidunt arcu, sodales condimentum erat vulputate a. Ut ac tortor nisl. Curabitur et posuere nulla, ut feugiat arcu. Sed placerat pellentesque lacus at faucibus. Sed massa arcu, tristique eu neque vitae, sagittis luctus velit. Vestibulum id convallis massa. Donec hendrerit enim vel nunc sodales fringilla. Morbi condimentum, dolor at imperdiet tempus, ligula nibh efficitur tellus, tristique congue odio est at nulla.</td>
+  		</tr>		
+  	</table>
+
+  </div>
+  <div class="col-lg-4 col-md-6 col-md-12 col-sm-12">
+
+ 	<table style="100%">
+  		<tr >
+  			<th></th>
+  			<th></th>
+  			<th></th>
+  			<th id="section">Sushi</th>
+
+  		</tr>
+  		<tr>
+  			<td colspan="4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus auctor vel lorem et consequat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In porta lacinia ipsum, nec consectetur tortor consequat a. Vestibulum molestie tincidunt arcu, sodales condimentum erat vulputate a. Ut ac tortor nisl. Curabitur et posuere nulla, ut feugiat arcu. Sed placerat pellentesque lacus at faucibus. Sed massa arcu, tristique eu neque vitae, sagittis luctus velit. Vestibulum id convallis massa. Donec hendrerit enim vel nunc sodales fringilla. Morbi condimentum, dolor at imperdiet tempus, ligula nibh efficitur tellus, tristique congue odio est at nulla.</td>
+  		</tr>		
+  	</table>
+
+  </div>
+</div>
+
+</body>
+</html>
